# roar

./: .gitignore  Cargo.toml  roar.py
.devcontainer/: Dockerfile  devcontainer.json
doc/: rar3_tech_note.txt
src/: bin.rs  block.rs  error.rs  traits.rs
src/block/: archive.rs  common.rs  cursor.rs  file.rs  magic.rs  mod.rs  preamble.rs  prefix.rs
src/block-old/: prefix.rs
src/io/: mod.rs
