[package]
name = "roar"
version = "0.1.0"
authors = ["Erich Healy <ErichRHealy@gmail.com>"]
edition = "2018"

# [lib]
# name = "roar"
# path = "src/lib.rs"

[[bin]]
name = "roar"
path = "src/bin.rs"

[dependencies]
# futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly" ]}
clap = "2.33"
# failure = "*"
crc = "1"
bitflags = "*"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"

#
#pin-utils = "0.1.0-alpha.4"



# New libs here
thiserror  = "1.0"
futures = "0.3"
async-std = "1.4"
async-trait = "0.1.22"
byteorder = "1"
