[package]
name = "roar"
version = "0.1.0"
authors = ["Erich Healy <ErichRHealy@gmail.com>"]
edition = "2018"

# [lib]
# name = "roar"
# path = "src/lib.rs"

[[bin]]
name = "roar"
path = "src/bin.rs"

[dependencies]
clap = "2.33"
crc = "1"
bitflags = "*"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
thiserror  = "1.0"
futures = "0.3"
async-std = "1.4"
async-trait = "0.1.22"
byteorder = "1"
