[package]
name = "roar"
version = "0.1.0"
authors = ["Erich Healy <ErichRHealy@gmail.com>"]
edition = "2018"

# [lib]
# name = "roar"
# path = "src/lib.rs"

[[bin]]
name = "roar"
path = "src/bin.rs"

[dependencies]
clap = "2.33"
crc = "1"
bitflags = "*"
thiserror  = "1.0"
futures = "0.3"
async-std = "1.4"
async-trait = "0.1.22"
byteorder = "1"

[dev-dependencies.async-std]
version = "1.4"
features = [ "attributes" ]
